hphp/hack/test/typecheck/loader_example.php.exp
File "loader_example.php", line 6, characters 19-21:
Was expecting a return type hint (Typing[4030])
File "loader_example.php", line 43, characters 11-12:
Invalid argument (Typing[4110])
  File "loader_example.php", line 17, characters 27-30:
  Expected exactly the type `ALoader`
  File "loader_example.php", line 38, characters 16-22:
    where the class `ALoader` was referenced here
  File "loader_example.php", line 19, characters 49-64:
    resulting from expanding the type constant `ALoader::TLoadsType`
  File "loader_example.php", line 38, characters 16-22:
    where the class `ALoader` was referenced here
  File "loader_example.php", line 31, characters 49-55:
  But got the nonexact type `ALoader`
  File "loader_example.php", line 38, characters 16-22:
  Since `ALoader` is not final
  File "loader_example.php", line 31, characters 49-55:
  this might not be a `ALoader`
